--- a/src/diagnoza/diagnoza.css
+++ b/src/diagnoza/diagnoza.css
@@ -59,3 +59,7 @@ body {
 a.active:hover {
 	background-color: #094475;
 }
+
+@media (prefers-color-scheme: dark) {
+	body {background-color: #232323;}
+}
