--- a/src/psi/psi.css
+++ b/src/psi/psi.css
@@ -15,12 +15,17 @@ body {
 	padding: 0;
 	overflow: hidden;
 	background-image: linear-gradient(to right, #063155, #0a5088 );
+	position: fixed;
+	width: 100%;
+	z-index:2;
+	box-shadow: 0px 0px 3px 3px rgb(75, 75, 75);
 }
 
 #logo{
 	float: left;
 	background-color: #d2e1ee;
 	margin-right: 15px;
+	width: 16%;
 }
 
 #logo a {
@@ -58,6 +63,146 @@ body {
 
 a.active:hover {
 	background-color: #094475;
+}
+
+.left_menu {
+	width: 16%;
+	height: 1200px;
+	background-color: #eeeeee;
+	float: left;
+	position: fixed;
+	margin-top: 1%;
+	/*box-shadow: 0px 0px 2px 2px rgb(224, 224, 224);*/
+}
+
+.menu_button {
+	width: 80%;
+	background-color: #0a5088;
+	margin-left: 10%;
+	margin-right: auto;
+	padding-top: 5%;
+	padding-bottom: 5%;
+	margin-top: 20%;
+	border-width: 0;
+	border-radius: 10px;
+	font-size: 20px;
+	color: white;
+	box-shadow: 0px 0px 1px 1px rgb(180, 180, 180);
+}
+
+.menu_button:hover {
+	background-color: #094779;
+}
+
+#fetch_dogs {
+	margin-top: 10%;
+}
+
+#dogs_list {
+	width: 80%;
+	margin-left: 18%;
+	margin-bottom: 2%;
+	margin-right: 2%;
+	margin-top: 2%;
+	/*background-color: magenta;*/
+	float: left;
+}
+
+#dogs_list_label {
+	margin-left: 2%;
+	margin-top: 2%;
+	font-size: 50px;
+	font-weight: bolder;
+	color:#073a63;
+}
+
+.dog {
+	width: 100%;
+	height: 100px;
+	background-color: rgb(255, 255, 255);
+	border-radius: 10px;
+	display: block;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	box-shadow: 0px 0px 4px 4px rgb(224, 224, 224);
+}
+
+.name_div {
+	width: 40%;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	display: block;
+	float: left;
+}
+
+.dog_name {
+	font-size: 50px;
+	text-align: left;
+	padding-left: 50px;
+}
+
+.labels {
+	width: 25%;
+	display: block;
+	float: left;
+}
+
+.birthday_label_div {
+	width: 100%;
+	padding-top: 13px;
+	padding-bottom: 13px;
+	display: block;
+	float: left;
+}
+
+.birthday_label {
+	font-size: 20px;
+	text-align: left;
+}
+
+.animalID_label_div {
+	width: 100%;
+	padding-top: 13px;
+	padding-bottom: 13px;
+	display: block;
+	float: left;
+}
+
+.animalID_label {
+	font-size: 20px;
+	text-align: left;
+}
+
+.values {
+	width: 35%;
+	display: block;
+	float: left;
+}
+
+.birthday_div {
+	width: 100%;
+	padding-top: 13px;
+	padding-bottom: 13px;
+	display: block;
+	float: left;
+}
+
+.dog_birthday {
+	font-size: 20px;
+	text-align: left;
+}
+
+.animalID_div {
+	width: 100%;
+	padding-top: 13px;
+	padding-bottom: 13px;
+	display: block;
+	float: left;
+}
+
+.dog_animalID {
+	font-size: 20px;
+	text-align: left;
 }
 
 @media (prefers-color-scheme: dark) {
