--- a/src/diagnoza/diagnoza.css
+++ b/src/diagnoza/diagnoza.css
@@ -71,6 +71,206 @@ a.active:hover {
 	float: left;
 }
 
+#title {
+	font-size: 40px;
+	font-weight: bold;
+	color:#073a63 ;
+	float: left;
+	margin-top: 3%;
+	margin-left: 5%;
+	margin-right: 5%;
+	width: 90%;
+}
+
+#inputFields {
+	float: left;
+	width: 90%;
+	margin-left: 5%;
+	margin-top: 2%;
+	border-radius: 10px;
+	box-shadow: 0px 0px 3px 2px rgb(216, 216, 216);
+}
+
+#myDogsDiv {
+	width: 90%;
+	margin-left: 5%;
+	float: left;
+	border: #d3d3d3;
+	border-width: 2px;
+	border-bottom-style: solid;
+}
+
+#myDogsLabel {
+	float: left;
+	font-size: 30px;
+	font-weight: bold;
+	margin-top: 5%;
+	margin-bottom: 5%;
+	width: 10%;
+	height: 10%;
+	color:#073a63 ;
+}
+
+#myDogs {
+	float: left;
+	font-size: 25px;
+	margin-top: 5%;
+	margin-bottom: 5%;
+	width: 90%;
+	height: 10%;
+	border-radius: 5px;
+	border: solid #073a63;
+	outline-color: transparent;
+}
+
+#myDogs:focus {
+	outline: none;
+}
+
+#simptomiDiv {
+	width: 90%;
+	padding-top: 4%;
+	padding-bottom: 5%;
+	margin-left: 5%;
+	float: left;
+	border: #d3d3d3;
+	border-width: 2px;
+	border-bottom-style: solid;
+}
+
+#simptomiTitle {
+	float: left;
+	font-size: 30px;
+	font-weight: bold;
+	margin-bottom: 2%;
+	width: 90%;
+	height: 10%;
+	color:#073a63 ;
+}
+
+.simptomDiv {
+	width: 50%;
+	float: left;
+	padding-right: 5%;
+}
+
+.simptomLabel {
+	float: left;
+	font-size: 20px;
+	height: 10%;
+	color:#2c2c2c ;
+	margin-left: 3%;
+	margin-top: 2%;
+	margin-bottom: 2%;
+	border: solid transparent;
+}
+
+.simptomCheckbox {
+	float: left;
+	width: 25px;
+	height: 25px;
+	margin-top: 2%;
+	margin-bottom: 2%;
+	accent-color: #073a63;
+}
+
+#search {
+	float: right;
+	width: 20%;
+	margin-right: 5%;
+	margin-bottom: 4%;
+	margin-top: 4%;
+	padding-top: 0.7%;
+	padding-bottom: 0.7%;
+	border-style: none;
+	border-radius: 5px;
+	font-size: 25px;
+	color: white;
+	background-color:#073a63;
+}
+
+#search:hover {
+	background-color:#063155;
+}
+
+#outputFields {
+	float: left;
+	width: 90%;
+	margin-left: 5%;
+	margin-top: 2%;
+	margin-bottom: 10%;
+	border-radius: 10px;
+	box-shadow: 0px 0px 3px 2px rgb(216, 216, 216);
+	display : none;
+}
+
+#rezultatiTitle {
+	float: left;
+	font-size: 30px;
+	font-weight: bold;
+	margin-top: 5%;
+	margin-bottom: 3%;
+	margin-left: 5%;
+	width: 90%;
+	height: 10%;
+	color:#073a63 ;
+}
+
+#rezultati {
+	float: left;
+	width: 100%;
+	height: 180px;
+	margin-bottom: 5%;
+}
+
+.rezultat{
+	float: left;
+	width: 28%;
+	height: 100%;
+	margin-left: 3%;
+	border-radius: 15px;
+	position: relative;
+	background-color: #073a63;
+}
+
+#rezultat1{
+	margin-left: 5%;
+}
+
+.imeBolezni {
+	color: white;
+	width: 90%;
+	float: left;
+	margin-left: 5%;
+	text-align: center;
+	font-size: 25px;
+	font-weight: bold;
+	position: absolute;
+	top: 15%;
+}
+
+.percentageDiv {
+	background-color: white;
+	width: 70%;
+	float:left;
+	position: absolute;
+	top: 55%;
+	margin-left: 15%;
+	margin-bottom: 10%;
+	border-radius: 10px;
+}
+
+.percentage{
+	width: 90%;
+	float: left;
+	margin-top: 5%;
+	margin-left: 5%;
+	margin-bottom: 5%;
+	text-align: center;
+	font-size: 25px;
+	font-weight: bold;
+}
+
 @media (prefers-color-scheme: dark) {
 	body {background-color: #232323;}
 }
