--- a/src/diagnoza/diagnoza.css
+++ b/src/diagnoza/diagnoza.css
@@ -87,6 +87,7 @@ a.active:hover {
 	width: 90%;
 	margin-left: 5%;
 	margin-top: 2%;
+	margin-bottom: 2%;
 	border-radius: 10px;
 	box-shadow: 0px 0px 3px 2px rgb(216, 216, 216);
 }
@@ -197,7 +198,6 @@ a.active:hover {
 	float: left;
 	width: 90%;
 	margin-left: 5%;
-	margin-top: 2%;
 	margin-bottom: 10%;
 	border-radius: 10px;
 	box-shadow: 0px 0px 3px 2px rgb(216, 216, 216);
