--- a/src/veterinar/veterinar.css
+++ b/src/veterinar/veterinar.css
@@ -71,10 +71,170 @@ a.active:hover {
 	background-color: #094475;
 }
 
-#main {
-	width: 100%;
-	margin-top: 52px;
+.left_menu {
+	width: 16%;
+	height: 1200px;
+	background-color: #eeeeee;
 	float: left;
+	position: fixed;
+	margin-top: 1%;
+	/*box-shadow: 0px 0px 2px 2px rgb(224, 224, 224);*/
+}
+
+.menu_button {
+	width: 80%;
+	background-color: #0a5088;
+	margin-left: 10%;
+	margin-right: auto;
+	padding-top: 5%;
+	padding-bottom: 5%;
+	margin-top: 20%;
+	border-width: 0;
+	border-radius: 10px;
+	font-size: 20px;
+	color: white;
+	box-shadow: 0px 0px 1px 1px rgb(180, 180, 180);
+}
+
+.menu_button:hover {
+	background-color: #094779;
+}
+
+#fetch {
+	margin-top: 10%;
+}
+
+#appointments_list {
+	width: 80%;
+	margin-left: 18%;
+	margin-bottom: 2%;
+	margin-right: 2%;
+	margin-top: 2%;
+	float: left;
+}
+
+#appointments_list_label {
+	margin-left: 2%;
+	margin-top: 2%;
+	font-size: 50px;
+	font-weight: bolder;
+	color:#073a63;
+}
+
+#prihodnjiTermini {
+	width: 100%;
+	margin-bottom: 2%;
+	margin-right: 2%;
+	margin-top: 2%;
+	float: left;
+}
+
+#pretekliTerminiLabel{
+	width: 100%;
+	color: #545454;
+	font-size: 25px;
+	text-align: center;
+	float: left;
+	padding-bottom: 1%;
+	border: #d0d0d0;
+	border-bottom-style: solid;
+}
+
+#pretekliTermini {
+	width: 100%;
+	margin-bottom: 2%;
+	margin-right: 2%;
+	margin-top: 2%;
+	float: left;
+}
+
+.appointment {
+	width: 100%;
+	height: 100px;
+	background-color: rgb(255, 255, 255);
+	border-radius: 10px;
+	display: block;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	box-shadow: 0px 0px 3px 2px rgb(224, 224, 224);
+}
+
+.name_div {
+	width: 40%;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	display: block;
+	float: left;
+}
+
+.dog_name {
+	font-size: 50px;
+	text-align: left;
+	padding-left: 50px;
+}
+
+.labels {
+	width: 25%;
+	display: block;
+	float: left;
+}
+
+.date_label_div {
+	width: 100%;
+	padding-top: 13px;
+	padding-bottom: 13px;
+	display: block;
+	float: left;
+}
+
+.date_label {
+	font-size: 20px;
+	text-align: left;
+}
+
+.vet_label_div {
+	width: 100%;
+	padding-top: 13px;
+	padding-bottom: 13px;
+	display: block;
+	float: left;
+}
+
+.vet_label {
+	font-size: 20px;
+	text-align: left;
+}
+
+.values {
+	width: 35%;
+	display: block;
+	float: left;
+}
+
+.date_div {
+	width: 100%;
+	padding-top: 13px;
+	padding-bottom: 13px;
+	display: block;
+	float: left;
+}
+
+.date {
+	font-size: 20px;
+	text-align: left;
+}
+
+.vet_div {
+	width: 100%;
+	padding-top: 13px;
+	padding-bottom: 13px;
+	display: block;
+	float: left;
+}
+
+.vet {
+	font-size: 20px;
+	text-align: left;
 }
 
 @media (prefers-color-scheme: dark) {
