Added model, fixes, added missing functionalites

--- a/src/psi/psi.css
+++ b/src/psi/psi.css
@@ -213,4 +213,6 @@ a.active:hover {
 
 @media (prefers-color-scheme: dark) {
 	body {background-color: #232323;}
+	#output_value {color: white}
+	.simptomLabel {color: white}
 }
