--- a/src/diagnoza/diagnoza.css
+++ b/src/diagnoza/diagnoza.css
@@ -271,6 +271,102 @@ a.active:hover {
 	font-weight: bold;
 }
 
-@media (prefers-color-scheme: dark) {
-	body {background-color: #232323;}
+
+#rezultatDiv {
+	width: 90%;
+	padding-top: 4%;
+	padding-bottom: 5%;
+	margin-left: 5%;
+	float: left;
+}
+
+#rezultatTitle {
+	float: left;
+	font-size: 30px;
+	font-weight: bold;
+	margin-bottom: 2%;
+	width: 90%;
+	height: 10%;
+	color:#073a63 ;
+}
+
+.outputDiv {
+	width: 100%;
+	float: left;
+}
+
+.output_value {
+	float: left;
+	font-size: 20px;
+	height: 10%;
+	width: 100%;
+	color:#2c2c2c ;
+	margin-top: 2%;
+	margin-bottom: 2%;
+	border: solid transparent;
+	overflow-wrap: break-word;
+
+	color: transparent;
+	text-shadow: 0 0 13px #000;
+}
+
+#outputFields {
+	float: left;
+	width: 90%;
+	margin-left: 5%;
+	margin-bottom: 10%;
+	border-radius: 10px;
+	box-shadow: 0px 0px 3px 2px rgb(216, 216, 216);
+	display : none;
+}
+
+#rezultatiTitle {
+	float: left;
+	font-size: 30px;
+	font-weight: bold;
+	margin-top: 5%;
+	margin-bottom: 3%;
+	margin-left: 5%;
+	width: 90%;
+	height: 10%;
+	color:#073a63 ;
+}
+
+#rezultati {
+	float: left;
+	width: 100%;
+	height: 180px;
+	margin-bottom: 5%;
+}
+
+.rezultat{
+	float: left;
+	width: 28%;
+	height: 100%;
+	margin-left: 3%;
+	border-radius: 15px;
+	position: relative;
+	background-color: #073a63;
+}
+
+#rezultat1{
+	margin-left: 5%;
+}
+
+#loading-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 9999;
+}
+
+#loading-message {
+	color: white;
+	font-size: 24px;
 }
