--- a/src/trening/trening.css
+++ b/src/trening/trening.css
@@ -287,6 +287,25 @@ a.active:hover {
 	font-weight: bold;
 }
 
+#loading-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 9999;
+}
+
+#loading-message {
+	color: white;
+	font-size: 24px;
+}
 @media (prefers-color-scheme: dark) {
 	body {background-color: #232323;}
+	#output_value {color: white}
+	.simptomLabel {color: white}
 }
