Dodal email regex, ddoal tooast, fixal diagnozo in trening no conn

--- a/src/register/register.css
+++ b/src/register/register.css
@@ -18,6 +18,32 @@ body {
 	overflow: hidden;
 }
 
+
+#toast {
+    visibility: hidden;
+    max-width: 50%;
+    margin: auto;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1;
+    left: 25%;
+    bottom: 30px;
+    font-size: 17px;
+    transition: visibility 0.5s, opacity 0.5s;
+    opacity: 0;
+}
+
+#toast.show {
+    visibility: visible;
+    opacity: 1;
+}
+
+
+
 #box {
 	height:60%;
     width: 500px;
